--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
+		"firebase": "^9.1.0",
 		"husky": "^7.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -18,7 +19,8 @@
 		"styled-components": "^5.3.1",
 		"styled-reset": "^4.3.4",
 		"typescript": "^4.1.2",
-		"web-vitals": "^1.0.1"
+		"web-vitals": "^1.0.1",
+		"webfontloader": "^1.6.28"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -46,6 +48,7 @@
 	"devDependencies": {
 		"@types/react-icons": "^3.0.0",
 		"@types/styled-components": "^5.1.14",
+		"@types/webfontloader": "^1.6.33",
 		"@typescript-eslint/eslint-plugin": "^4.32.0",
 		"@typescript-eslint/parser": "^4.32.0",
 		"eslint": "^7.32.0",
