--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
 		"husky": "^7.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-hot-toast": "^2.2.0",
 		"react-icons": "^4.2.0",
-		"react-scripts": "4.0.3",
-		"styled-components": "^5.3.1",
-		"styled-reset": "^4.3.4",
+		"react-modal": "^3.14.4",
+		"react-router-dom": "^6.2.1",
+		"react-scripts": "^5.0.0",
 		"typescript": "^4.1.2",
 		"web-vitals": "^1.0.1",
 		"webfontloader": "^1.6.28"
@@ -47,14 +48,19 @@
 	},
 	"devDependencies": {
 		"@types/react-icons": "^3.0.0",
-		"@types/styled-components": "^5.1.14",
+		"@types/react-modal": "^3.13.1",
+		"@types/react-router": "^5.1.17",
+		"@types/react-router-dom": "^5.3.2",
 		"@types/webfontloader": "^1.6.33",
 		"@typescript-eslint/eslint-plugin": "^4.32.0",
 		"@typescript-eslint/parser": "^4.32.0",
+		"autoprefixer": "^10.4.2",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.26.1",
-		"prettier": "^2.4.1"
+		"postcss": "^8.4.5",
+		"prettier": "^2.4.1",
+		"tailwindcss": "^3.0.13"
 	}
 }
