--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,6 @@
 		"ecmaVersion": 12,
 		"sourceType": "module"
 	},
-	"plugins": ["react", "@typescript-eslint"],
+	"plugins": ["react", "react-hooks", "@typescript-eslint"],
 	"rules": {}
 }
