--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@firebase/auth-types": "^0.11.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -10,7 +11,9 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
-		"firebase": "^9.1.0",
+		"date-fns": "^2.28.0",
+		"eslint-plugin-react-hooks": "^4.2.1-rc.0-next-51947a14b-20220113",
+		"firebase": "8",
 		"husky": "^7.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
@@ -47,6 +50,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/date-fns": "^2.6.0",
 		"@types/react-icons": "^3.0.0",
 		"@types/react-modal": "^3.13.1",
 		"@types/react-router": "^5.1.17",
@@ -62,5 +66,8 @@
 		"postcss": "^8.4.5",
 		"prettier": "^2.4.1",
 		"tailwindcss": "^3.0.13"
+	},
+	"resolutions": {
+		"mini-css-extract-plugin": "2.4.5"
 	}
 }
